# llmops-databricks-course-yilmazsal

./: .pre-commit-config.yaml  CLAUDE.md  README.md  arxiv_agent.py  databricks.yml  project_config.yml  pyproject.toml
.claude/: 1.json
.claude/commands/: run-notebook.md
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml
notebooks/: 0_policies_data_ingestion.py  1_foundation_models.py  2.2_pdf_parsing_ai_parse.py  2.4_embeddings_vector_search.py  3.1_custom_functions_tools.py  3.2_mcp_integration.py  3.2b_genie.py  3.3_session_memory_lakebase.py  3.4.spn_authentication.py  4.1.tracing_implementation.py  4.2.custom_agent.py  4.3.evaluation_theory.py  4.4.mlflow_log_register.py  5.1_endpoint_deployment.py  download_papers.py  hello_world.py
resources/: foundation_models_job.yml  hello_world_job.yml  pdf_parsing_ai_parse_job.yml  policies_data_ingestion_job.yml  process_data_job.yml  register_deploy_agent.yml
resources/deployment_scripts/: deploy_agent.py  log_register_agent.py  process_data.py
src/llmops_databricks/: agent.py  config.py  data_processor.py  document_chunker.py  evaluation.py  mcp.py  memory.py  message_formatters.py  vector_search.py
src/your_custom_package/: __init__.py
tests/: __init__.py  test_basic.py
